--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -24,6 +24,10 @@ platforms:
   driver_config:
     box: opscode_fedora-19_provisionerless
     box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode-fedora-19_provisionerless.box
+- name: ubuntu-13.04
+  driver_config:
+    box: opscode_ubuntu-13.04_provisionerless
+    box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode_ubuntu-13.04_provisionerless.box
 
 suites:
 - name: default
