--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -24,6 +24,10 @@ platforms:
   driver_config:
     box: opscode_fedora-19_provisionerless
     box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode-fedora-19_provisionerless.box
+- name: debian-7.1.0
+  driver_config:
+    box: opscode_debian-7.1.0_provisionerless
+    box_url: https://053db83ba1374e6e1230-f1dfd5e757f02de37888b01fa0b9ac01.ssl.cf1.rackcdn.com/debian-7.1.0.box
 - name: ubuntu-13.04
   driver_config:
     box: opscode_ubuntu-13.04_provisionerless
