--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,6 +1,8 @@
 ---
-driver_plugin: vagrant
-driver_config:
+driver: vagrant
+
+provisioner:
+  name: chef_solo
   require_chef_omnibus: true
 
 platforms:
@@ -8,7 +10,7 @@ platforms:
 - name: centos-6.4
 - name: debian-7.1.0
 - name: fedora-19
-  driver_config:
+  driver:
     box: opscode-fedora-19
     box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode-fedora-19_provisionerless.box
 - name: ubuntu-10.04
