--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,16 +6,34 @@ provisioner:
   require_chef_omnibus: true
 
 platforms:
-- name: centos-5.9
-- name: centos-6.4
-- name: debian-7.1.0
-- name: fedora-19
+- name: centos-5.10
   driver:
-    box: opscode-fedora-19
-    box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/opscode-fedora-19_provisionerless.box
+    box: opscode-centos-5.10
+    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-5.10_chef-provisionerless.box
+- name: centos-6.4
+  driver:
+    box: opscode-centos-6.4
+    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.4_chef-provisionerless.box
+- name: debian-7.2.0
+  driver:
+    box: opscode-debian-7.2.0
+    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_debian-7.2.0_chef-provisionerless.box
+- name: fedora-20
+  driver:
+    box: opscode-fedora-20
+    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_fedora-20_chef-provisionerless.box
 - name: ubuntu-10.04
+  driver:
+    box: opscode-ubuntu-10.04
+    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-10.04_chef-provisionerless.box
 - name: ubuntu-12.04
-- name: ubuntu-13.04
+  driver:
+    box: opscode-ubuntu-12.04
+    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-12.04_chef-provisionerless.box
+- name: ubuntu-13.10
+  driver:
+    box: opscode-ubuntu-13.10
+    box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-13.10_chef-provisionerless.box
 
 suites:
 - name: default
