--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -39,5 +39,5 @@ platforms:
 
 suites:
 - name: default
-  run_list: ["recipe[the_silver_searcher]"]
-  attributes: {}
+  run_list:
+  - recipe[the_silver_searcher]
