--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,16 @@
 AllCops:
   Excludes:
     - bin/*
+    - tmp/**
+
+Encoding:
+  Enabled: false
+
+AlignParameters:
+  Enabled: false
+
+LineLength:
+  Max: 200
+
+HashSyntax:
+  EnforcedStyle: hash_rockets
